<resources>
    <string name="app_name">Simplary</string>
    <string name="title_community">Сообщество</string>
    <string name="title_tasks">Задачи</string>
    <string name="title_notes">Заметки</string>
    <string name="title_profile">Профиль</string>
    <string name="register">Регистрация</string>
    <string name="login">Логин/Никнейм</string>
    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="rePassword">Повторите пароль</string>
    <string name="tryToReg">Зарегистрироваться</string>
    <string name="hasAcc">Уже есть аккаунт в Simplary?</string>
    <string name="signIn">Войти</string>
    <string name="noteTitle">Название заметки</string>
    <string name="noteDescription">Текст заметки</string>
    <string name="sign_up_success">Войти</string>
    <string name="tab_subcribed_label">Подписки</string>
    <string name="tab_subcribers">Подписчики</string>
    <string name="tab_popular_label">Популярное</string>
    <string name="tab_search_label">Поиск</string>
    <string name="title_goals">Цели</string>
    <string name="achievements">Достижения</string>
    <string name="statistics">Статистика</string>
    <string name="selfanalysis">Самоанализ</string>
    <string name="settings">Настройки</string>
</resources>