<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textColor="@color/button_color"
        android:textSize="36sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="385dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">


        <EditText
            android:id="@+id/nickEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/login"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/name"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/lastName"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/email"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/password"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/pass2EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/rePassword"
            android:padding="8dp"
            android:password="true" />
    </LinearLayout>


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/layout_sign_button"
        android:text="@string/tryToReg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/button_color" />

    <TextView
        android:id="@+id/checkSignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/hasAcc"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/toSignInButton"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:background="@drawable/layout_sign_button"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/button_color" />

</androidx.appcompat.widget.LinearLayoutCompat>