<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary_color"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/button_color"
        android:textSize="36sp" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="338dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/pngegg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.auth.AuthActivity">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/email"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/layout_ebg"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@drawable/layout_sign_button"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/button_color" />

</LinearLayout>